# synthoseis-3dvae-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
.github/: session-summary-and-commit.prompt.md
.github/workflows/: ci.yml
checkpoints_smoke/: vae_epoch1.pt  vae_epoch2.pt
docs/: train.py
docs/plans/: input-augmentations-sparse-keep-and-decimate-trilinear-2026-06-02.md  seismic_tokenizer_app.md
docs/seismic_tokenizer/: README.md  code_description.md  decisions_and_rationale.md  future_work.md  user_guide.md
docs/sessions/: 2026-05-31-gan-balance-and-training-logging-updates.html  2026-05-31-gan-balance-and-training-logging-updates.md  2026-05-31-mixup-augmentation-refactor.html  2026-05-31-mixup-augmentation-refactor.md  2026-05-31-vae-training-and-cleanup.html  2026-05-31-vae-training-and-cleanup.md  2026-05-31-vae-training-stability-upgrades.html  2026-05-31-vae-training-stability-upgrades.md  augmentation-pipeline-sparse-poisson-uniform-and-validation-sync-2026-06-03.html  augmentation-pipeline-sparse-poisson-uniform-and-validation-sync-2026-06-03.md  lpips-gan-loss-mid-session-snapshot-2026-06-06.html  (+13 more)
docs/training/: README.md  (+2 more)
scripts/: sample_patches.py  tokenize.py  train.py
src/: augmentations.py  deep_supervision.py  model.py
synthoseis-3dvae-poc/: requirements.txt
tests/: test_deep_supervision.py  test_input_augmentations.py  test_patch_size_shape_generalization.py  test_sparse_keep_vs_uniform_benchmark.py  test_tokenize_cli.py  test_tokenizer_config.py  test_tokenizer_events.py  test_tokenizer_phase3_core.py  test_tokenizer_phase3_search_volume.py  test_tokenizer_phase4_engine.py  test_tokenizer_phase5_optimization.py  test_tokenizer_regression.py  test_tokenizer_token_picker.py  test_tokenizer_ui_smoke.py  test_train_lpips.py  test_vertical_warp.py
(+288 files in other folders)
